# ollama-grid-search

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  Prompt for testing.md  README.md  README.md.old  bun.lockb  flake.nix  index.html  notes.md  package.json  tailwind.config.js  todo.md  todo.txt  tsconfig.json
.github/workflows/: publish.yml  publish.yml.manual  publish.yml.old.v1  rust-ci.yml
desktop/: README.md  bun.lockb  package.json  scratch.txt  todo.md  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  Atoms.ts  Layout.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: commands.rs  main.rs
desktop/src/Interfaces/: index.ts
desktop/src/components/: checkbox-group.tsx  settings-dialog.tsx
desktop/src/components/filters/: ModelSelector.tsx  ModelSelector_old.tsx
desktop/src/components/queries/: index.ts
desktop/src/components/results/: grid-results-pane.tsx  iteration-result.tsx
desktop/src/components/ui/: AlertError.tsx  button.tsx  collapsible-item.tsx  form-grid-params.tsx  spinner.tsx
desktop/src/lib/: Atoms.ts  utils.ts
desktop/styles/: globals.css
docs/: DEVELOPMENT.md  app-workflow.mermaid  notes.md  todo.md
nix/: shell.nix
old/: Cargo.toml  README.md
old/src/: main.rs
ollama-grid-search/: bun.lockb  components.json  index.html  package.json  tailwind.config.js  tsconfig.json
ollama-grid-search/src/: App.tsx  Layout.tsx
ollama-grid-search/src-tauri/: Cargo.toml  tauri.conf.json
ollama-grid-search/src-tauri/src/: main.rs
ollama-grid-search/src/components/: mode-toggle.tsx
ollama-grid-search/src/components/ui/: button.tsx
ollama-grid-search/styles/: globals.css
src/: App.tsx  Atoms.ts  Layout.tsx  issue.md  issue_with_form_params.md  issue_with_sqlx.md  main.rs
src-tauri/: Cargo.toml  audit.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/.sqlx/: query-95ac4127fd572ba6afe365ce24e5d1e5b512710b9969a3ae49685c3dcfd6d95b.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20240330000000_initial_schema.sql  20241101000000_create_prompts_table.sql  20241116000000_populate_prompts_table.sql  20241116000000_populate_prompts_table.sql.maybe  20241124000000_create_experiment_table.sql
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  ollama_types.rs
src-tauri/src/commands/: experiment.rs  llm.rs  mod.rs  prompt.rs
src-tauri/temp/: grid_search.db
src/Interfaces/: index.ts
src/components/: ErrorBoundary.tsx  VariableTextarea.tsx  experiment-data-dialog.tsx  form-grid-params.tsx  mode-toggle.tsx  prompt-archive-dialog.tsx  prompt-dialog.tsx  prompt-dialog.tsx_old  prompt-textarea.tsx  settings-dialog.tsx  tutorial.tsx
src/components/Error/: ErrorBoundary.tsx
src/components/Prompt/: promp-archive-form.tsx  prompt-archive-dialog.tsx  prompt-archive-dialog.tsx.option_display_list  prompt-list.tsx
src/components/Selectors/: ExperimentSelector.tsx  LogSelector.tsx  ModelSelector.tsx  PromptSelector.tsx  PromptSelector.tsx.old  PromptSelectorAutocom.tsx.temp  PromptSelectorWithAutocomplete.tsx.txt  SystemPromptSelector.tsx  autocomplete-with-command.tsx.example  autocomplete.tsx  logs-selector.tsx
src/components/filters/: ModelSelector.tsx  PromptSelector.tsx  SystemPromptSelector.tsx
src/components/queries/: index.ts
src/components/results/: grid-results-pane.tsx  iteration-result.tsx
src/components/ui/: alert-dialog-provider.tsx  alert-dialog.tsx  alert.tsx  button.tsx  checkbox.tsx  collapsible-item.tsx  collapsible-text.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  form-grid-params.tsx  form.tsx  input.tsx  label.tsx  logs-selector.tsx  popover.tsx  scroll-area.tsx  separator.tsx  sheet.tsx  spinner.tsx  switch.tsx  textarea.tsx  toast.tsx  tooltip.tsx  tutorial.tsx
src/lib/: index.ts  utils.ts
styles/: globals.css  globals.css.init
