[package]
name = "grid-search-desktop"
version = "0.1.0"
description = "A Tauri App to perform Grid Search and A/B testing experiments on LLMs"
authors = ["dezoito"]
license = "Whatever is in the repo"
repository = "https://github.com/dezoito/ollama-grid-search"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-all", "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.79"
thiserror = "1.0.56"
tokio = "1.36.0"
url = "2.5.0"
# The feature "rustls" is added due to issues with OpenSSL on Linux releases
# See https://github.com/tauri-apps/tauri/issues/4470#issuecomment-1170342732
ollama-rs = { version = "0.1.7", default-features = false, features = ["rustls"] }
chrono = "0.4.34"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
