[package]
name = "grid-search-desktop"
version = "0.9.0"
description = "A Tauri App to perform Grid Search and A/B testing experiments on LLMs"
authors = ["dezoito"]
license = "Whatever is in the repo"
repository = "https://github.com/dezoito/ollama-grid-search"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "path-all", "fs-all", "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.79"
thiserror = "1.0.56"
tokio = "1.37.0"
url = "2.5.0"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
# The feature "rustls" is added due to issues with OpenSSL on Linux releases
# See https://github.com/tauri-apps/tauri/issues/4470#issuecomment-1170342732
ollama-rs = { version = "0.2.0", default-features = false, features = ["rustls"] }
chrono = "0.4.38"
reqwest = {version = "0.12.4", features = ["blocking", "json", "rustls-tls"], default-features = false  }
sqlx = { version = "0.8.1", features = ["runtime-tokio", "sqlite", "chrono"] }
eff-wordlist = "1.0.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# [profile.release]
# lto = true

